--- a/sub1.html
+++ b/sub1.html
@@ -561,15 +561,23 @@
                                 </li>
                                 <li>
                                     <input type="checkbox">
-                                    <a href="#" data-code = "1"><span>맛 : </span>상쾌한맛</a>
+                                    <a href="#" data-code = "1"><span>맛 : </span>고소한맛</a>
                                 </li>
                                 <li>
                                     <input type="checkbox">
-                                    <a href="#" data-code = "2"><span>맛 : </span>담백한맛</a>
+                                    <a href="#" data-code = "2"><span>맛 : </span>상쾌한맛</a>
                                 </li>
                                 <li>
                                     <input type="checkbox">
-                                    <a href="#" data-code = "3"><span>맛 : </span>상큼한맛</a>
+                                    <a href="#" data-code = "3"><span>맛 : </span>담백한맛</a>
+                                </li>
+                                <li>
+                                    <input type="checkbox">
+                                    <a href="#" data-code = "4"><span>맛 : </span>매콤한맛</a>
+                                </li>
+                                <li>
+                                    <input type="checkbox">
+                                    <a href="#" data-code = "5"><span>맛 : </span>상큼한맛</a>
                                 </li>
                             </ul>                                
                         </td>
@@ -581,23 +589,27 @@
                             <ul>
                                 <li>
                                     <input type="checkbox">
-                                    <a href="#" data-code = "4"><span>원료 : </span>곡물</a>
+                                    <a href="#" data-code = "6"><span>원료 : </span>곡물</a>
                                 </li>
                                 <li>
                                     <input type="checkbox">
-                                    <a href="#" data-code = "5"><span>원료 : </span>초콜릿</a>
+                                    <a href="#" data-code = "7"><span>원료 : </span>초콜릿</a>
                                 </li>
                                 <li>
                                     <input type="checkbox">
-                                    <a href="#" data-code = "6"><span>원료 : </span>과일</a>
+                                    <a href="#" data-code = "8"><span>원료 : </span>과일</a>
                                 </li>
                                 <li>
                                     <input type="checkbox">
-                                    <a href="#" data-code = "7"><span>원료 : </span>크림</a>
+                                    <a href="#" data-code = "9"><span>원료 : </span>크림</a>
                                 </li>
                                 <li>
                                     <input type="checkbox">
-                                    <a href="#" data-code = "8"><span>원료 : </span>치즈</a>
+                                    <a href="#" data-code = "10"><span>원료 : </span>치즈</a>
+                                </li>
+                                <li>
+                                    <input type="checkbox">
+                                    <a href="#" data-code = "11"><span>원료 : </span>기타</a>
                                 </li>
                             </ul>
                         </td>
@@ -609,15 +621,31 @@
                             <ul>
                                 <li>
                                     <input type="checkbox">
-                                    <a href="#" data-code = "9"><span>식감 : </span>딱딱함</a>
+                                    <a href="#" data-code = "12"><span>식감 : </span>딱딱함</a>
                                 </li>
                                 <li>
                                     <input type="checkbox">
-                                    <a href="#" data-code = "10"><span>식감 : </span>쫀득함</a>
+                                    <a href="#" data-code = "13"><span>식감 : </span>쫀득함</a>
                                 </li>
                                 <li>
                                     <input type="checkbox">
-                                    <a href="#" data-code = "11"><span>식감 : </span>말랑함</a>
+                                    <a href="#" data-code = "14"><span>식감 : </span>부드러움</a>
+                                </li>
+                                <li>
+                                    <input type="checkbox">
+                                    <a href="#" data-code = "15"><span>식감 : </span>바삭함</a>
+                                </li>
+                                <li>
+                                    <input type="checkbox">
+                                    <a href="#" data-code = "16"><span>식감 : </span>말랑함</a>
+                                </li>
+                                <li>
+                                    <input type="checkbox">
+                                    <a href="#" data-code = "17"><span>식감 : </span>퍽퍽함</a>
+                                </li>
+                                <li>
+                                    <input type="checkbox">
+                                    <a href="#" data-code = "18"><span>식감 : </span>톡터짐</a>
                                 </li>
                             </ul>
                         </td>
