--- a/index.html
+++ b/index.html
@@ -28,6 +28,38 @@
 
 </head>
 <body>
+
+    <!-- 마우스 effect -->
+    <div class="cursor"></div>
+    <style>
+        .cursor {
+            z-index: 9999 !important;
+            position: absolute;
+            left: -100px;
+            top: -100px;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            border: 3px solid orange;
+            z-index: 1000;
+            background-color: rgba(255, 165, 0, 0.4);
+            user-select: none;
+            pointer-events: none;
+            transition: background-color .2s, border-color .2s;
+        }
+    </style>
+
+    <script>
+        window.addEventListener("mousemove",function(event){
+
+        let x = event.pageX + -25 + "px"
+        let y = event.pageY + -25 + "px"
+        document.querySelector(".cursor").style.cssText = "left:"+x+"; top:"+y;
+        });
+    </script>
+
+    
+
     <!-- 상단 배너 -->
     <div class="top_banner">
         <div class="container">
@@ -1097,6 +1129,5 @@
     <script src="js/slick.min.js"></script>
     <script src="js/data.js"></script>
     <script src="js/index.js"></script>
-
 </body>
 </html>
